--- a/Project4/res/layout/project_card.xml
+++ b/Project4/res/layout/project_card.xml
@@ -1,26 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-       xmlns:card_view="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
-       android:id="@+id/card_view_project"
-       android:layout_gravity="center"
-       android:layout_width="match_parent"
-       android:layout_height="150dp" 
-       card_view:cardCornerRadius="4dp" 
-       >
-    <LinearLayout 
-        android:orientation="vertical"
+<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/card_view_project"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    card_view:cardCornerRadius="4dp" 
+    >
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-       <TextView
-           android:id="@+id/project_card_line1"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content" 
-           />
-       <TextView
-           android:id="@+id/project_card_line2"
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content" 
-           />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal" 
+        android:padding="10dp">
+
+        <ImageView
+            android:id="@+id/project_card_color_bar"
+            android:layout_width="15dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/project_card_color_bar" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" 
+            android:paddingLeft="10dp">
+
+            <TextView
+                android:id="@+id/project_card_line1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" 
+                android:textColor="@android:color/primary_text_light"/>
+
+            <TextView
+                android:id="@+id/project_card_line2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" 
+                android:textColor="@android:color/secondary_text_light"/>
+
+            <TableLayout
+                android:id="@+id/myCardInnerTable"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <TableRow
+                    android:id="@+id/tableRow1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/cardDayLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Tag:" />
+
+                    <TextView
+                        android:id="@+id/cardDayValue"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="4,37" />
+                </TableRow>
+
+                <TableRow
+                    android:id="@+id/tableRow2"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" >
+
+                    <TextView
+                        android:id="@+id/cardMonthLabel"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Monat:" />
+
+                    <TextView
+                        android:id="@+id/cardMonthValue"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="60,5" />
+                </TableRow>
+            </TableLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal" 
+                style="?android:attr/buttonBarStyle">
+
+                <Button
+                    android:id="@+id/buttonCome"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/buttonProjectCome" 
+                    style="?android:attr/buttonBarButtonStyle" 
+                    android:textColor="@android:color/holo_orange_dark" 
+                    android:textStyle="italic"/>
+
+                <Button
+                    android:id="@+id/buttonGo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/buttonProjectGo" 
+                    style="?android:attr/buttonBarButtonStyle" 
+                    android:textColor="@android:color/primary_text_light" 
+                    android:textStyle="italic"/>
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
-    
- </android.support.v7.widget.CardView>
+
+</android.support.v7.widget.CardView>
