--- a/Project4/res/drawable/project_card_color_bar.xml
+++ b/Project4/res/drawable/project_card_color_bar.xml
@@ -20,6 +20,6 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <solid android:color="#33b5e5"/>
-    <corners android:topLeftRadius="4dp" android:bottomLeftRadius="4dp"/>
+    <!--corners android:topLeftRadius="0dp" android:bottomLeftRadius="0dp"/-->
     <!-- <stroke  android:width="2dip" android:color="#A4C2E0"/>-->
 </shape>
