--- a/Project4/res/layout/main.xml
+++ b/Project4/res/layout/main.xml
@@ -1,50 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
-    <TableLayout 
-        android:layout_marginTop="10px"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical" >
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TableRow >
-			<Button 
-				android:text="notSet"
-				android:id="@+id/buttonCustomerBegin"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_weight="1">
-			</Button>
-			<Button
-				android:text="notSet"
-				android:id="@+id/buttonCustomerEnd"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_weight="1">
-			</Button>
-			</TableRow>
-        <TableRow >
-			<Button 
-				android:text="notSet"
-				android:id="@+id/buttonOfficeBegin"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_weight="1">
-			</Button>
-			<Button
-				android:text="notSet"
-				android:id="@+id/buttonOfficeEnd"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_weight="1">
-			</Button>
-        </TableRow>
-    </TableLayout>
-	
-	<ListView 
-	    android:layout_marginTop="10px"
-		android:id="@+id/android:list"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content">
-	</ListView>
+        android:layout_height="wrap_content"
+        android:background="@color/app_widget_background_color"
+        android:padding="10dp" >
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="HEUTE"
+                android:textColor="@android:color/tertiary_text_light"
+                android:textSize="@dimen/text_small" >
+            </TextView>
+
+            <TextView
+                android:id="@+id/summary_day"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/project_color_preselect"
+                android:textSize="@dimen/text_normal" >
+            </TextView>
+            
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="WOCHE"
+                android:textColor="@android:color/tertiary_text_light"
+                android:textSize="@dimen/text_small" >
+            </TextView>
+
+            <TextView
+                android:id="@+id/summary_week"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/project_color_preselect"
+                android:textSize="@dimen/text_normal" >
+            </TextView>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MONAT"
+                android:textColor="@android:color/tertiary_text_light"
+                android:textSize="@dimen/text_small" >
+            </TextView>
+
+            <TextView
+                android:id="@+id/summary_month"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/project_color_preselect"
+                android:textSize="@dimen/text_normal" >
+            </TextView>
+            </LinearLayout>
+    </RelativeLayout>
+
+    <include layout="@layout/project_list" />
+
 </LinearLayout>
