--- a/Project4/res/layout/project_list.xml
+++ b/Project4/res/layout/project_list.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
-    
- 	<ListView 
-	    android:layout_marginTop="10dp"
-		android:id="@+id/project_list_view"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-	</ListView>
+    android:orientation="vertical" 
+    android:padding="10dp">
 
-</LinearLayout>
+    <ListView
+        android:id="@+id/project_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp" >
+    </ListView>
+
+    <ImageButton 
+        android:id="@+id/button_add_project"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_action_new" 
+        android:layout_alignParentBottom="true" 
+        android:layout_alignParentRight="true"
+        android:contentDescription="@string/action_add_project" 
+        android:background="@drawable/button_circle" 
+        android:layout_marginRight="25dp" 
+        android:layout_marginBottom="25dp"/>
+
+</RelativeLayout>
