--- a/Project4/res/drawable/button_circle.xml
+++ b/Project4/res/drawable/button_circle.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="@color/app_primary_color"/>
-    <stroke android:width="2dp" android:color="@color/app_primary_color" />
+    <solid android:color="@color/app_accent_color"/>
+    <stroke android:width="2dp" android:color="@color/app_accent_lighter_color" />
     <size android:width="54dp" android:height="54dp"/>
 </shape>
