--- a/Project4/res/values-v14/styles.xml
+++ b/Project4/res/values-v14/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!--
         Base application theme for API 14+. This theme completely replaces
@@ -8,5 +8,17 @@
     <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
         <!-- API 14 theme customizations can go here. -->
     </style>
+
+    <!-- Application theme. -->
+    <!--style name="AppTheme" parent="AppBaseTheme">
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:actionOverflowButtonStyle">@style/ActionButtonOverflowStyle</item>
+    </style-->
+
+    <!--style name="ActionButtonOverflowStyle" parent="@android:style/Widget.Holo.Light.ActionButton.Overflow">
+        <item name="android:minWidth">48dp</item>
+        <item name="android:paddingStart">12dp</item>
+        <item name="android:paddingEnd">12dp</item>
+        </style-->
 
 </resources>
