--- a/Project4/res/values/styles.xml
+++ b/Project4/res/values/styles.xml
@@ -14,35 +14,35 @@
 
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
+
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <!--item name="android:actionBarStyle">@style/MyActionBar</item-->
     </style>
 
     <!-- ActionBar styles -->
-    <style name="MyActionBar"
-           parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
-        <!--item name="android:background">#ffbb33</item-->
-        <!--item name="android:background">#ff8800</item-->
-        <item name="android:background">#f57c00</item>
-        </style>
-    
-   	<style name="settingPageLabelFont" parent="@android:style/TextAppearance.Small">
-	    <item name="android:textColor">#2764BE</item>
-	    <!--item name="android:textColor">#FFFFFF</item-->
-	</style>   
-	<style name="settingPageEditFont">
-	</style>   
- 
-	    <!-- Makes a "light" equivalent of Theme.Dialog -->
+    <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@color/app_primary_color</item>
+    </style>
+
+    <style name="settingPageLabelFont" parent="@android:style/TextAppearance.Small">
+        <item name="android:textColor">#2764BE</item>
+        <!-- item name="android:textColor">#FFFFFF</item -->
+    </style>
+
+    <style name="settingPageEditFont"></style>
+
+    <!-- Makes a "light" equivalent of Theme.Dialog -->
     <style name="AppTheme.Dialog.Light" parent="@android:style/Theme.Dialog">
         <item name="@android:background">@color/my_light_grey1</item>
         <item name="@android:textColor">@android:color/primary_text_light</item>
     </style>
-	
+
     <style name="booking_row_text_normal">
         <item name="@android:textColor">@android:color/tertiary_text_light</item>
     </style>
+
     <style name="booking_row_text_important">
         <item name="@android:textColor">@android:color/primary_text_light</item>
     </style>
+
 </resources>
