--- a/Project4/res/layout/booking_row.xml
+++ b/Project4/res/layout/booking_row.xml
@@ -16,35 +16,40 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:paddingLeft="10dp" 
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp">
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp" >
 
         <TextView
             android:id="@+id/booking_row_line1"
+            style="@style/booking_row_text_important"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/booking_row_text_important" />
+            android:layout_height="wrap_content" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" 
-            >
+            android:layout_height="wrap_content" >
 
             <TextView
                 android:id="@+id/booking_row_line2_left"
+                style="@style/booking_row_text_normal"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentLeft="true"
-                style="@style/booking_row_text_normal" />
+                android:layout_alignParentLeft="true" />
 
             <TextView
                 android:id="@+id/booking_row_line2_right"
+                style="@style/booking_row_text_important"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                style="@style/booking_row_text_important" />
+                android:layout_alignParentRight="true" />
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/booking_row_line3"
+            style="@style/booking_row_text_normal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 
 </LinearLayout>
