--- a/Project4/res/values/colors.xml
+++ b/Project4/res/values/colors.xml
@@ -46,5 +46,6 @@
     <color name="my_light_grey1">#D3D3D3</color>
     <color name="my_light_grey2">#BDBDBD</color>
     <color name="my_dark_grey">#7E7E7E</color>
+    <color name="no_project_color">@android:color/black</color>
 
 </resources>
