--- a/Project4/res/menu/main.xml
+++ b/Project4/res/menu/main.xml
@@ -5,21 +5,21 @@
         android:icon="@drawable/ic_action_list"
         android:title="@string/action_list_bookings"
         android:showAsAction="always"/>
-    <item
+    <!--item
         android:id="@+id/action_edit_projects"
         android:icon="@drawable/ic_action_edit"
         android:title="@string/action_edit_projects"
-        android:showAsAction="never"/>
+        android:showAsAction="never"/-->
     <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_action_settings"
         android:title="@string/action_settings"
         android:showAsAction="never"/>
-    <item
+    <!--item
         android:id="@+id/action_help"
         android:icon="@drawable/ic_action_help"
         android:title="@string/action_help"
-        android:showAsAction="never"/>
+        android:showAsAction="never"/-->
     <item
         android:id="@+id/action_about"
         android:icon="@drawable/ic_action_about"
