--- a/Project4/res/values/dimens.xml
+++ b/Project4/res/values/dimens.xml
@@ -6,5 +6,8 @@
     
     <dimen name="text_small">10sp</dimen>
     <dimen name="text_normal">16sp</dimen>
+    <dimen name="text_big">25sp</dimen>
+    <dimen name="text_view_big">55sp</dimen>
+    <dimen name="text_bigger">30sp</dimen>
     
 </resources>
