--- a/Project4/res/layout/dashboard_summary.xml
+++ b/Project4/res/layout/dashboard_summary.xml
@@ -8,9 +8,9 @@
     <TableRow
         android:id="@+id/summaryTableRowToday"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:gravity="center" 
-        android:layout_marginTop="5dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:gravity="center" >
 
         <TextView
             android:id="@+id/summary_title_today"
@@ -22,29 +22,41 @@
             android:textSize="@dimen/text_normal" >
         </TextView>
 
-        <com.gek.and.geklib.view.ColorBarView
-            android:id="@+id/colorBarToday"
+        <FrameLayout
+            android:id="@+id/colorBarTodayFrame"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.6" />
+            android:layout_weight="0.6"
+            android:foreground="?android:attr/selectableItemBackground" 
+            android:background="@drawable/shadow_small" 
+            android:paddingTop="0dp" 
+            android:paddingLeft="0dp"
+            android:paddingRight="1dp"
+            android:paddingBottom="1dp">
+
+            <com.gek.and.geklib.view.ColorBarView
+                android:id="@+id/colorBarToday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
 
         <TextView
             android:id="@+id/summary_day"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.15"
+            android:gravity="right"
             android:textColor="@color/app_text_important_color"
-            android:textSize="@dimen/text_normal" 
-            android:gravity="right">
+            android:textSize="@dimen/text_normal" >
         </TextView>
     </TableRow>
 
     <TableRow
         android:id="@+id/summaryTableRowWeek"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:gravity="center" 
-        android:layout_marginTop="10dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center" >
 
         <TextView
             android:id="@+id/summary_title_week"
@@ -56,29 +68,41 @@
             android:textSize="@dimen/text_normal" >
         </TextView>
 
-        <com.gek.and.geklib.view.ColorBarView
-            android:id="@+id/colorBarWeek"
+        <FrameLayout
+            android:id="@+id/colorBarWeekFrame"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.6" />
+            android:layout_weight="0.6"
+            android:foreground="?android:attr/selectableItemBackground" 
+            android:background="@drawable/shadow_small"
+            android:paddingTop="0dp" 
+            android:paddingLeft="0dp"
+            android:paddingRight="1dp"
+            android:paddingBottom="1dp">
+
+            <com.gek.and.geklib.view.ColorBarView
+                android:id="@+id/colorBarWeek"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
 
         <TextView
             android:id="@+id/summary_week"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.15"
+            android:gravity="right"
             android:textColor="@color/app_text_important_color"
-            android:textSize="@dimen/text_normal" 
-            android:gravity="right">
+            android:textSize="@dimen/text_normal" >
         </TextView>
     </TableRow>
 
     <TableRow
         android:id="@+id/summaryTableRowMonth"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
-        android:gravity="center" 
-        android:layout_marginTop="10dp">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:gravity="center" >
 
         <TextView
             android:id="@+id/summary_title_month"
@@ -90,20 +114,32 @@
             android:textSize="@dimen/text_normal" >
         </TextView>
 
-        <com.gek.and.geklib.view.ColorBarView
-            android:id="@+id/colorBarMonth"
+        <FrameLayout
+            android:id="@+id/colorBarMonthFrame"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.6" />
+            android:layout_weight="0.6"
+            android:foreground="?android:attr/selectableItemBackground" 
+            android:background="@drawable/shadow_small"
+            android:paddingTop="0dp" 
+            android:paddingLeft="0dp"
+            android:paddingRight="1dp"
+            android:paddingBottom="1dp">
+
+            <com.gek.and.geklib.view.ColorBarView
+                android:id="@+id/colorBarMonth"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </FrameLayout>
 
         <TextView
             android:id="@+id/summary_month"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="0.15"
+            android:gravity="right"
             android:textColor="@color/app_text_important_color"
-            android:textSize="@dimen/text_normal" 
-            android:gravity="right">
+            android:textSize="@dimen/text_normal" >
         </TextView>
     </TableRow>
 
