--- a/Project4/res/menu/main.xml
+++ b/Project4/res/menu/main.xml
@@ -1,28 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xx="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:xx="http://schemas.android.com/apk/res-auto" >
+
     <item
         android:id="@+id/action_list_bookings"
         android:icon="@drawable/ic_action_list"
-        android:title="@string/action_list_bookings"
-        android:showAsAction="always"/>
-    <!--item
+        android:showAsAction="always"
+        android:title="@string/action_list_bookings"/>
+    <!--
+        item
         android:id="@+id/action_edit_projects"
         android:icon="@drawable/ic_action_edit"
         android:title="@string/action_edit_projects"
-        android:showAsAction="never"/-->
+        android:showAsAction="never"/
+    -->
+    <item
+        android:id="@+id/action_manage_projects"
+        android:showAsAction="never"
+        android:title="@string/action_manage_projects"/>
     <item
         android:id="@+id/action_settings"
         android:icon="@drawable/ic_action_settings"
-        android:title="@string/action_settings"
-        android:showAsAction="never"/>
-    <!--item
+        android:showAsAction="never"
+        android:title="@string/action_settings"/>
+    <!--
+        item
         android:id="@+id/action_help"
         android:icon="@drawable/ic_action_help"
         android:title="@string/action_help"
-        android:showAsAction="never"/-->
+        android:showAsAction="never"/
+    -->
     <item
         android:id="@+id/action_about"
         android:icon="@drawable/ic_action_about"
-        android:title="@string/action_about"
-        android:showAsAction="never"/>
+        android:showAsAction="never"
+        android:title="@string/action_about"/>
+
 </menu>
